--- a/IISLogsToExcel.csproj
+++ b/IISLogsToExcel.csproj
@@ -9,6 +9,8 @@
     <ApplicationIcon>app-icon.ico</ApplicationIcon>
     <Authors>Amresh Kumar</Authors>
     <SignAssembly>True</SignAssembly>
+    <AssemblyVersion>1.3.0</AssemblyVersion>
+    <FileVersion>1.3.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
