--- a/IISLogsToExcel.csproj
+++ b/IISLogsToExcel.csproj
@@ -14,6 +14,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove=".gitattributes" />
+    <None Remove=".gitignore" />
+    <None Remove="App.config" />
+    <None Remove="IISLogsToExcel.pfx" />
+    <None Remove="README.md" />
+    <None Remove="Unused Methods.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="app-icon.ico" />
   </ItemGroup>
 
